# bbs

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Pipfile  README  README.md  docker-compose.yml  fabfile.py  manage.py  pyproject.toml  requirements.txt  schema.graphql  settings-sample.py  urls.py
bbs/: admin.py  apps.py  forms.py  models.py  settings.py  urls.py  wsgi.py
bbs/api/: errors.py  schema.py
bbs/api/mutations/: shop.py  users.py
bbs/api/queries/: inventory.py  shop.py  users.py
bbs/api/types/: inventory.py  shop.py  users.py
bbs/management/commands/: export_schema.py  profile_images.py
bbs/migrations/: 0001_initial.py  0002_alter_inventorytransaction_amount_and_more.py  0003_alter_order_order_sum.py
bbs/tests/: test_mutations.py
bbs/views/: reports.py
bbssite/: settings.py  urls.py  wsgi.py
frontend/: .eslintrc.js  .graphqlconfig  codegen.yml  index.html  package-lock.json  package.json  stylelint.config.js  tsconfig.json  vite.config.js
frontend/src/: App.module.css  App.tsx  Routes.tsx  client.ts  global.css  hooks.ts  types.ts  typings.d.ts
frontend/src/components/: Footer.module.css  Footer.tsx  GQLError.module.css  GQLError.tsx  Header.module.css  Header.tsx  ProductCard.module.css  ProductCard.tsx  Splash.module.css  Splash.tsx  Toast.module.css  Toast.tsx  ToastProvider.tsx  UserCard.module.css  UserCard.tsx  Wireframe.module.css  Wireframe.tsx
frontend/src/features/: Register.tsx  useRegister.ts  (+1 more)
main/: admin.py  apps.py  forms.py  models.py  signals.py  testing.py  urls.py  utils.py  views.py
main/api/: errors.py  mutations.py  schema.py  serializers.py  types.py  views.py
main/migrations/: 0001_initial.py  0002_auto__add_inventorytransaction__add_field_product_inventory_amount.py  0003_auto__chg_field_order_customer.py
main/tests/: test_mutations.py
main/views/: general.py  reports.py  stats.py  users.py
scripts/: facebook_sync.py
static/: Gruntfile.js  bower.json  config.rb  gulpfile.js  package.json
static/gaute/: config.rb
static/js/: app.js  deposit.js  log.js  register.js  stats.js
static/sass/: _variables.scss  screen.scss
static/stylesheets/: screen.css
templates/: base.html  deposit.html  home.html  inventory.html  inventory_add.html  log.html  modal-confirm-delete.html  modal-delete-order.html  modal-delete-transaction.html  nav.html  order_reciept.html  profile.html  register.html  report.html  stats.html
templates/registration/: create_user.html  login.html  login_form.html  logout.html
(+60 files in other folders)
